--- a/sample/high_rate_representative/params_RCSVO.cfg
+++ b/sample/high_rate_representative/params_RCSVO.cfg
@@ -2,10 +2,10 @@
 # See params_electrodes.cfg for parameter explanations.
 
 [Particles]
-type = homog2_hybrid
-discretization = 1e-9
+type = diffn2_hybrid
+discretization = 2e-8
 shape = cylinder
-thickness = 20e-6
+thickness = 1.6705e-5
 
 type2 = homog
 shape2 = sphere
@@ -18,30 +18,34 @@ noise = false
 noise_prefac = 1e-9
 numnoise = 100
 
-Omega_a = 2.3968391999999994e-20
+Omega_a = 1.284021e-20
 
-kappa = 5.0148e-10
-B = 0.1916e9
+kappa = 5e-6
+B = 0
 
 rho_s = 2.9058e28
-D = 5e-13
-Dfunc = constant
+D = 5e-16
+D2 = 5e-16
+Dfunc = custom6_mid
+sigmafunc = custom_exp2
 
 dgammadc = 0e-30
 cwet = 0.98
 
-muRfunc2 = LiCF3_ss
+muRfunc2 = LiCF4_ss
 rho_s2 = 5.3421e28
 
-cap_ratio = 6.79613
+cap_ratio = 2.031
+
+Cdl1 = 0.000005
 
 [Reactions]
 rxnType = BV_SVO_hybrid
-k0 = 3.5e-5
-k1 = 1e-3
+k0 = 1.5e-5
+k1 = 7e-1
 
 rxnType2 = Tafel_CF
-k2 = 5e-4
+k2 = 1e-5
 
 
 E_A = 13000
@@ -50,4 +54,4 @@ alpha2 = 0.57
 
 # Fraggedakis et al. 2020, lambda = 8.3kBT
 lambda = 3.4113e-20
-Rfilm = 0e-0
+Rfilm = 0
